// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThemeTab 스냅샷 > 그린 테마 구조가 유지됨 1`] = `
<div>
  <div
    style="margin-bottom: 24px; text-align: center;"
  >
    <div
      style="width: 64px; height: 64px; border-radius: 16px; margin: 0px auto 12px; display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, #52c41a 0%, #389e0d 100%); box-shadow: 0 8px 24px #52c41a33;"
    >
      <span
        aria-label="bg-colors"
        class="anticon anticon-bg-colors"
        role="img"
        style="font-size: 28px; color: white;"
      >
        <svg
          aria-hidden="true"
          data-icon="bg-colors"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M766.4 744.3c43.7 0 79.4-36.2 79.4-80.5 0-53.5-79.4-140.8-79.4-140.8S687 610.3 687 663.8c0 44.3 35.7 80.5 79.4 80.5zm-377.1-44.1c7.1 7.1 18.6 7.1 25.6 0l256.1-256c7.1-7.1 7.1-18.6 0-25.6l-256-256c-.6-.6-1.3-1.2-2-1.7l-78.2-78.2a9.11 9.11 0 00-12.8 0l-48 48a9.11 9.11 0 000 12.8l67.2 67.2-207.8 207.9c-7.1 7.1-7.1 18.6 0 25.6l255.9 256zm12.9-448.6l178.9 178.9H223.4l178.8-178.9zM904 816H120c-4.4 0-8 3.6-8 8v80c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-80c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
    </div>
    <span
      class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
      style="font-size: 16px; display: block;"
    >
      <strong>
        테마 색상
      </strong>
    </span>
    <span
      class="ant-typography ant-typography-secondary css-dev-only-do-not-override-p45i5k css-var-root"
      style="font-size: 13px;"
    >
      앱 전체의 테마 색상을 선택하세요
    </span>
  </div>
  <div
    style="display: grid; grid-template-columns: repeat(auto-fill, minmax(90px, 1fr)); gap: 12px;"
  >
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #1890ff 0%, #096dd9 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        파란색 (기본)
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid #52c41a; transition: all 0.2s ease; background: #52c41a15;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #52c41a 0%, #389e0d 100%); box-shadow: 0 4px 12px #52c41a40;"
      >
        <div
          style="width: 24px; height: 24px; border-radius: 50%; background: rgba(255, 255, 255, 0.9); display: flex; align-items: center; justify-content: center;"
        >
          <span
            aria-label="check"
            class="anticon anticon-check"
            role="img"
            style="color: #52c41a; font-size: 14px;"
          >
            <svg
              aria-hidden="true"
              data-icon="check"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 600; color: #52c41a;"
      >
        초록색
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #722ed1 0%, #531dab 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        보라색
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #f5222d 0%, #cf1322 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        빨간색
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #fa8c16 0%, #d46b08 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        주황색
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #13c2c2 0%, #08979c 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        청록색
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #434343 0%, #1a1a1a 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        검정색
      </span>
    </div>
  </div>
  <div
    style="margin-top: 24px; padding: 12px 16px; border-radius: 8px; background: #52c41a08; border: 1px solid #52c41a20;"
  >
    <span
      class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
      style="font-size: 12px; color: #595959;"
    >
      테마는 자동 저장됩니다. 로그인하면 모든 기기에 동일하게 적용됩니다.
    </span>
  </div>
</div>
`;

exports[`ThemeTab 스냅샷 > 블루 테마 구조가 유지됨 1`] = `
<div>
  <div
    style="margin-bottom: 24px; text-align: center;"
  >
    <div
      style="width: 64px; height: 64px; border-radius: 16px; margin: 0px auto 12px; display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, #1890ff 0%, #096dd9 100%); box-shadow: 0 8px 24px #1890ff33;"
    >
      <span
        aria-label="bg-colors"
        class="anticon anticon-bg-colors"
        role="img"
        style="font-size: 28px; color: white;"
      >
        <svg
          aria-hidden="true"
          data-icon="bg-colors"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M766.4 744.3c43.7 0 79.4-36.2 79.4-80.5 0-53.5-79.4-140.8-79.4-140.8S687 610.3 687 663.8c0 44.3 35.7 80.5 79.4 80.5zm-377.1-44.1c7.1 7.1 18.6 7.1 25.6 0l256.1-256c7.1-7.1 7.1-18.6 0-25.6l-256-256c-.6-.6-1.3-1.2-2-1.7l-78.2-78.2a9.11 9.11 0 00-12.8 0l-48 48a9.11 9.11 0 000 12.8l67.2 67.2-207.8 207.9c-7.1 7.1-7.1 18.6 0 25.6l255.9 256zm12.9-448.6l178.9 178.9H223.4l178.8-178.9zM904 816H120c-4.4 0-8 3.6-8 8v80c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-80c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
    </div>
    <span
      class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
      style="font-size: 16px; display: block;"
    >
      <strong>
        테마 색상
      </strong>
    </span>
    <span
      class="ant-typography ant-typography-secondary css-dev-only-do-not-override-p45i5k css-var-root"
      style="font-size: 13px;"
    >
      앱 전체의 테마 색상을 선택하세요
    </span>
  </div>
  <div
    style="display: grid; grid-template-columns: repeat(auto-fill, minmax(90px, 1fr)); gap: 12px;"
  >
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid #1890ff; transition: all 0.2s ease; background: #1890ff15;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #1890ff 0%, #096dd9 100%); box-shadow: 0 4px 12px #1890ff40;"
      >
        <div
          style="width: 24px; height: 24px; border-radius: 50%; background: rgba(255, 255, 255, 0.9); display: flex; align-items: center; justify-content: center;"
        >
          <span
            aria-label="check"
            class="anticon anticon-check"
            role="img"
            style="color: #1890ff; font-size: 14px;"
          >
            <svg
              aria-hidden="true"
              data-icon="check"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 600; color: #1890ff;"
      >
        파란색 (기본)
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #52c41a 0%, #389e0d 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        초록색
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #722ed1 0%, #531dab 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        보라색
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #f5222d 0%, #cf1322 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        빨간색
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #fa8c16 0%, #d46b08 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        주황색
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #13c2c2 0%, #08979c 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        청록색
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #434343 0%, #1a1a1a 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        검정색
      </span>
    </div>
  </div>
  <div
    style="margin-top: 24px; padding: 12px 16px; border-radius: 8px; background: #1890ff08; border: 1px solid #1890ff20;"
  >
    <span
      class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
      style="font-size: 12px; color: #595959;"
    >
      테마는 자동 저장됩니다. 로그인하면 모든 기기에 동일하게 적용됩니다.
    </span>
  </div>
</div>
`;

exports[`ThemeTab 스냅샷 > 퍼플 테마 구조가 유지됨 1`] = `
<div>
  <div
    style="margin-bottom: 24px; text-align: center;"
  >
    <div
      style="width: 64px; height: 64px; border-radius: 16px; margin: 0px auto 12px; display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, #722ed1 0%, #531dab 100%); box-shadow: 0 8px 24px #722ed133;"
    >
      <span
        aria-label="bg-colors"
        class="anticon anticon-bg-colors"
        role="img"
        style="font-size: 28px; color: white;"
      >
        <svg
          aria-hidden="true"
          data-icon="bg-colors"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M766.4 744.3c43.7 0 79.4-36.2 79.4-80.5 0-53.5-79.4-140.8-79.4-140.8S687 610.3 687 663.8c0 44.3 35.7 80.5 79.4 80.5zm-377.1-44.1c7.1 7.1 18.6 7.1 25.6 0l256.1-256c7.1-7.1 7.1-18.6 0-25.6l-256-256c-.6-.6-1.3-1.2-2-1.7l-78.2-78.2a9.11 9.11 0 00-12.8 0l-48 48a9.11 9.11 0 000 12.8l67.2 67.2-207.8 207.9c-7.1 7.1-7.1 18.6 0 25.6l255.9 256zm12.9-448.6l178.9 178.9H223.4l178.8-178.9zM904 816H120c-4.4 0-8 3.6-8 8v80c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-80c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
    </div>
    <span
      class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
      style="font-size: 16px; display: block;"
    >
      <strong>
        테마 색상
      </strong>
    </span>
    <span
      class="ant-typography ant-typography-secondary css-dev-only-do-not-override-p45i5k css-var-root"
      style="font-size: 13px;"
    >
      앱 전체의 테마 색상을 선택하세요
    </span>
  </div>
  <div
    style="display: grid; grid-template-columns: repeat(auto-fill, minmax(90px, 1fr)); gap: 12px;"
  >
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #1890ff 0%, #096dd9 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        파란색 (기본)
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #52c41a 0%, #389e0d 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        초록색
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid #722ed1; transition: all 0.2s ease; background: #722ed115;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #722ed1 0%, #531dab 100%); box-shadow: 0 4px 12px #722ed140;"
      >
        <div
          style="width: 24px; height: 24px; border-radius: 50%; background: rgba(255, 255, 255, 0.9); display: flex; align-items: center; justify-content: center;"
        >
          <span
            aria-label="check"
            class="anticon anticon-check"
            role="img"
            style="color: #722ed1; font-size: 14px;"
          >
            <svg
              aria-hidden="true"
              data-icon="check"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 600; color: #722ed1;"
      >
        보라색
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #f5222d 0%, #cf1322 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        빨간색
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #fa8c16 0%, #d46b08 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        주황색
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #13c2c2 0%, #08979c 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        청록색
      </span>
    </div>
    <div
      role="button"
      style="cursor: pointer; border-radius: 12px; padding: 4px; border: 2px solid transparent; transition: all 0.2s ease; background: transparent;"
      tabindex="0"
    >
      <div
        style="height: 56px; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; background: linear-gradient(135deg, #434343 0%, #1a1a1a 100%); box-shadow: none;"
      />
      <span
        class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
        style="display: block; text-align: center; font-size: 12px; font-weight: 400; color: #595959;"
      >
        검정색
      </span>
    </div>
  </div>
  <div
    style="margin-top: 24px; padding: 12px 16px; border-radius: 8px; background: #722ed108; border: 1px solid #722ed120;"
  >
    <span
      class="ant-typography css-dev-only-do-not-override-p45i5k css-var-root"
      style="font-size: 12px; color: #595959;"
    >
      테마는 자동 저장됩니다. 로그인하면 모든 기기에 동일하게 적용됩니다.
    </span>
  </div>
</div>
`;
